@@ -12,6 +12,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - Add support for new style command line options of xfreerdp on direct RDP
       connections. (Fixes: #772).
     - Replace "::" with "_" for the desktop link name on Windows.
+    - Fix direct RDP in broker mode.
 
   [ Mike Gabriel ]
   * New upstream release (4.0.5.1):
